# temper

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/: self-hosting.md
include/temper/: account.h  commodity.h  journal.h  parser.h  posting.h  transaction.h  types.h
python/: requirements.txt
scripts/: ci.sh
src/bindings/: CMakeLists.txt  module.cpp
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  account.cpp  journal.cpp
src/core/model/: commodity.cpp  posting.cpp  transaction.cpp
src/core/parser/: parser.cpp
src/core/reports/: balance.cpp  print.cpp  register.cpp  stats.cpp
src/core/utils/: date.cpp  decimal.cpp  hash.cpp
tests/: CMakeLists.txt  test_journal.cpp  test_parser.cpp
tests/fixtures/: main_with_includes.temper  simple_deposits.temper  simple_expenses.temper
